--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ joblib==1.4.2
 numpy==2.1.3
 jinja2==3.1.4                  # aunque Django usa su propio template engine, Jinja puede quedar si lo usas
 gunicorn==21.2.0  
+whitenoise==6.5.0
