--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Django==4.2.7
-gunicorn==20.1.0
-joblib==1.2.0
-scikit-learn==1.0.2 --only-binary=scikit-learn
-numpy==1.21.6 --only-binary=numpy
-whitenoise==6.4.0
+Django>=4.2,<5.0
+gunicorn>=20.0,<22.0
+joblib>=1.2,<1.3
+scikit-learn>=1.5,<1.6
+numpy>=1.24,<1.27
+pandas>=2.1,<2.3
+whitenoise>=6.0,<7.0
