--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 Django>=4.2,<5.0
 gunicorn>=20.0,<22.0
-joblib>=1.2,<1.3
+joblib>=1.3,<1.4
 scikit-learn>=1.5,<1.6
 numpy>=1.24,<1.27
 pandas>=2.1,<2.3
 whitenoise>=6.0,<7.0
+setuptools>=68.0.0
